--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.2",
     "resolve": "1.6.0",
+    "semantic-ui-css": "^2.3.3",
+    "semantic-ui-react": "^0.82.3",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
@@ -48,7 +50,10 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "client": "node scripts/start.js",
+    "server": "./test_live.sh",
+    "start: all": "concurrently \" npm run client\" \"npm run server\""
   },
   "jest": {
     "collectCoverageFrom": [
