--- a/django-react-web/package.json
+++ b/django-react-web/package.json
@@ -59,7 +59,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "start:live": "concurrently \" npm start\" \"./test_live.sh\""
+    "start:live": "DJANGO_DEV=true concurrently \"npm start\" \"./test_built.sh\""
   },
   "jest": {
     "collectCoverageFrom": [
@@ -111,6 +111,7 @@
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "concurrently": "^4.0.1",
     "webpack-bundle-tracker": "^0.3.0"
   }
 }
