--- a/django-react-web/package.json
+++ b/django-react-web/package.json
@@ -14,7 +14,7 @@
     "babel-preset-react-app": "^3.1.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-runtime": "6.26.0",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^3.3.7",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
@@ -28,11 +28,13 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
+    "faker": "^4.1.0",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "hash.js": "^1.1.5",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "lodash": "^4.17.10",
     "mobx": "^5.0.4",
     "mobx-react": "^5.2.5",
     "object-assign": "4.1.1",
@@ -41,6 +43,7 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.4.2",
+    "react-bootstrap": "^0.32.4",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
