--- a/django-react-web/package.json
+++ b/django-react-web/package.json
@@ -46,6 +46,7 @@
     "react-bootstrap": "^0.32.4",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.2",
+    "react-dom-confetti": "0.0.10",
     "react-router-dom": "^4.3.1",
     "resolve": "1.6.0",
     "semantic-ui-css": "^2.3.3",
