--- a/django-react-web/Pipfile
+++ b/django-react-web/Pipfile
@@ -12,7 +12,7 @@ djangorestframework-simplejwt = "==3.2.3"
 coreapi = "==2.3.3"
 "boto3" = "*"
 django-storages = "*"
-mysqlclient = "*"
+mysqlclient = "==1.3.12"
 
 [dev-packages]
 
