After eternity of trial and error trying to setup eb, finally successful deployed

--- a/django-react-web/.ebextensions/00-qaehs.config
+++ b/django-react-web/.ebextensions/00-qaehs.config
@@ -4,45 +4,56 @@ option_settings:
 
 packages:
   yum:
-    freeglut3-dev: []
-    build-essential: []
-    libx11-dev: []
-    libxmu-dev: []
-    libxi-dev: []
-    libgl1-mesa-glx: []
-    libglu1-mesa: []
-    libglu1-mesa-dev: []
-    libglfw3-dev: []
-    libgles2-mesa-dev: []
+    freeglut-devel: []
+    libx11-devel: []
+    libXmu-devel: []
+    libXi-devel: []
+    mesa-libGL: []
+    mesa-libGL-devel: []
+    mesa-libGLU: []
+    mesa-libGLU-devel: []
+    #libglfw3-dev: []
+    #glfw-devel: []
+    mesa-libGLES-devel: []
     unzip: []
 
 commands:
-  00-mkdir-setupdir:
-    command: "mkdir ~/qaehssetup"
-  01-clone-qaehscode:
+  00-install-devtools:
+    command: "sudo yum -y groupinstall \"Development Tools\""
+  01-mkdir-setupdir:
+    command: "mkdir -p qaehssetup"
+    cwd: /home/ec2-user
+  02-clone-qaehscode:
     command: "git clone https://SamualMac@bitbucket.org/SamualMac/qaehs_code.git"
-    cwd "~/qaehssetup"
-  02-download-anaconda3:
-    command "sudo curl -O https://repo.anaconda.com/archive/Anaconda3-5.2.0-Linux-x86_64.sh"
-    cwd "~/qaehssetup"
-  03-install-anaconda3:
-    command "sudo chmod +x ./Anaconda3-5.2.0-Linux-x86_64.sh && bash ./Anaconda3-5.2.0-Linux-x86_64.sh -b -f"
-    cwd "~/qaehssetup"
-  04-download-matlab-runetine-engine:
-    command "sudo curl -O http://ssd.mathworks.com/supportfiles/downloads/R2017b/deployment_files/R2017b/installers/glnxa64/MCR_R2017b_glnxa64_installer.zip"
-    cwd "~/qaehssetup"
+    cwd: /home/ec2-user
+    test: "[ ! -d qaehs_code ]"
+  03-download-anaconda3:
+    command: "sudo curl -O https://repo.anaconda.com/archive/Anaconda3-5.2.0-Linux-x86_64.sh"
+    cwd: /home/ec2-user
+    test: "[ ! -f Anaconda3-5.2.0-Linux-x86_64.sh ]"
+  04-install-anaconda3:
+    command: "bash ./Anaconda3-5.2.0-Linux-x86_64.sh -b -f"
+    cwd: /home/ec2-user
   05-mkdir-matlab-runtime-setup:
-    command "mkdir install_runtime"
-    cwd "~/qaehssetup"
-  06-mv-zip-to-install:
-    command "mv MCR_R2017b_glnxa64_installer.zip install_runtime"
-    cwd "~/qaehssetup"
+    command: "mkdir -p install_runtime"
+    cwd: /home/ec2-user
+  06-download-matlab-runetine-engine:
+    command: "sudo curl -O http://ssd.mathworks.com/supportfiles/downloads/R2017b/deployment_files/R2017b/installers/glnxa64/MCR_R2017b_glnxa64_installer.zip"
+    cwd: /home/ec2-user/install_runtime
+    test: "[ ! -f MCR_R2017b_glnxa64_installer.zip ]"
   07-unzip-mcr:
-    command "unzip MCR_R2017b_glnxa64_installer.zip"
-    cwd "~/qaehssetup/install_runtime"
+    command: "unzip MCR_R2017b_glnxa64_installer.zip"
+    cwd: /home/ec2-user/install_runtime
   08-install-mcr:
-    command "sudo ./install -mode silent -agreeToLicense yes"
-    cwd "~/qaehssetup/install_runtime"
-  09-setup-qaehscode:
-    command: "python setup.py install"
-    cwd: "cwd "~/qaehssetup/qaehs_code/compiled/ImportDeconvAlpha/for_redistribution_files_only"
+    command: "sudo ./install -mode silent -agreeToLicense yes"
+    cwd: /home/ec2-user/install_runtime
+  09-setup-qaehscode1:
+    command: "python3 setup.py install"
+    cwd: /home/ec2-user/qaehs_code/compiled/DeconvLibrarySearch_v1/for_redistribution_files_only
+  10-setup-qaehscode2:
+    command: "python3 setup.py install"
+    cwd: /home/ec2-user/qaehs_code/compiled/ImportDeconv_v1/for_redistribution_files_only
+  11-setup-qaehscode3:
+    command: "python3 setup.py install"
+    cwd: /home/ec2-user/qaehs_code/compiled/LibrarySearch_v1/for_redistribution_files_only
+
