Refined eb config

--- a/django-react-web/.ebextensions/00-qaehs.config
+++ b/django-react-web/.ebextensions/00-qaehs.config
@@ -1,6 +1,6 @@
 option_settings:
   aws:elasticbeanstalk:application:environment:
-    LD_LIBRARY_PATH: /usr/local/MATLAB/R2017b/runtime/glnxa64:/usr/local/MATLAB/R2017b/bin/glnxa64:/usr/local/MATLAB/R2017b/sys/opengl/lib/glnxa64/
+    LD_LIBRARY_PATH: /usr/local/MATLAB/MATLAB_Runtime/v93/runtime/glnxa64:/usr/local/MATLAB/MATLAB_Runtime/v93/bin/glnxa64:/usr/local/MATLAB/MATLAB_Runtime/v93/sys/opengl/lib/glnxa64/
 
 packages:
   yum:
@@ -20,40 +20,55 @@ packages:
 commands:
   00-install-devtools:
     command: "sudo yum -y groupinstall \"Development Tools\""
+    test: "[ ! -f /home/ec2-user/INSTALLED ]"
   01-mkdir-setupdir:
-    command: "mkdir -p qaehssetup"
+    command: "mkdir -p INSTALL"
     cwd: /home/ec2-user
+    test: "[ ! -f /home/ec2-user/INSTALLED ]"
   02-clone-qaehscode:
     command: "git clone https://SamualMac@bitbucket.org/SamualMac/qaehs_code.git"
-    cwd: /home/ec2-user
-    test: "[ ! -d qaehs_code ]"
+    cwd: /home/ec2-user/INSTALL
+    test: "[ ! -f /home/ec2-user/INSTALLED ]"
   03-download-anaconda3:
     command: "sudo curl -O https://repo.anaconda.com/archive/Anaconda3-5.2.0-Linux-x86_64.sh"
-    cwd: /home/ec2-user
-    test: "[ ! -f Anaconda3-5.2.0-Linux-x86_64.sh ]"
+    cwd: /home/ec2-user/INSTALL
+    test: "[ ! -f /home/ec2-user/INSTALLED ]"
   04-install-anaconda3:
     command: "bash ./Anaconda3-5.2.0-Linux-x86_64.sh -b -f"
-    cwd: /home/ec2-user
+    cwd: /home/ec2-user/INSTALL
+    test: "[ ! -f /home/ec2-user/INSTALLED ]"
   05-mkdir-matlab-runtime-setup:
     command: "mkdir -p install_runtime"
-    cwd: /home/ec2-user
+    cwd: /home/ec2-user/INSTALL
+    test: "[ ! -f /home/ec2-user/INSTALLED ]"
   06-download-matlab-runetine-engine:
     command: "sudo curl -O http://ssd.mathworks.com/supportfiles/downloads/R2017b/deployment_files/R2017b/installers/glnxa64/MCR_R2017b_glnxa64_installer.zip"
-    cwd: /home/ec2-user/install_runtime
-    test: "[ ! -f MCR_R2017b_glnxa64_installer.zip ]"
+    cwd: /home/ec2-user/INSTALL/install_runtime
+    test: "[ ! -f /home/ec2-user/INSTALLED ]"
   07-unzip-mcr:
     command: "unzip MCR_R2017b_glnxa64_installer.zip"
-    cwd: /home/ec2-user/install_runtime
+    cwd: /home/ec2-user/INSTALL/install_runtime
+    test: "[ ! -f /home/ec2-user/INSTALLED ]"
   08-install-mcr:
     command: "sudo ./install -mode silent -agreeToLicense yes"
-    cwd: /home/ec2-user/install_runtime
+    cwd: /home/ec2-user/INSTALL/install_runtime
+    test: "[ ! -f /home/ec2-user/INSTALLED ]"
   09-setup-qaehscode1:
-    command: "python3 setup.py install"
-    cwd: /home/ec2-user/qaehs_code/compiled/DeconvLibrarySearch_v1/for_redistribution_files_only
+    command: "sudo python setup.py install"
+    cwd: /home/ec2-user/INSTALL/qaehs_code/compiled/DeconvLibrarySearch_v1/for_redistribution_files_only
+    test: "[ ! -f /home/ec2-user/INSTALLED ]"
   10-setup-qaehscode2:
-    command: "python3 setup.py install"
-    cwd: /home/ec2-user/qaehs_code/compiled/ImportDeconv_v1/for_redistribution_files_only
+    command: "sudo python setup.py install"
+    cwd: /home/ec2-user/INSTALL/qaehs_code/compiled/ImportDeconv_v1/for_redistribution_files_only
+    test: "[ ! -f /home/ec2-user/INSTALLED ]"
   11-setup-qaehscode3:
-    command: "python3 setup.py install"
-    cwd: /home/ec2-user/qaehs_code/compiled/LibrarySearch_v1/for_redistribution_files_only
+    command: "sudo python setup.py install"
+    cwd: /home/ec2-user/INSTALL/qaehs_code/compiled/LibrarySearch_v1/for_redistribution_files_only
+    test: "[ ! -f /home/ec2-user/INSTALLED ]"
+  12-set-installed:
+    command: "touch INSTALLED"
+    cwd: /home/ec2-user
+    test: "[ ! -f /home/ec2-user/INSTALLED ]"
+  13-set-env:
+    command: ". /opt/python/current/env"
 
