Fixed install qaehs python modules to python3 in .ebextensions

--- a/django-react-web/.ebextensions/00-qaehs.config
+++ b/django-react-web/.ebextensions/00-qaehs.config
@@ -50,15 +50,15 @@ commands:
     cwd: /home/ec2-user/INSTALL/install_runtime
     test: "[ ! -f /home/ec2-user/INSTALLED ]"
   09-setup-qaehscode1:
-    command: "sudo python setup.py install"
+    command: "sudo python3 setup.py install"
     cwd: /home/ec2-user/INSTALL/qaehs_code/compiled/DeconvLibrarySearch_v1/for_redistribution_files_only
     test: "[ ! -f /home/ec2-user/INSTALLED ]"
   10-setup-qaehscode2:
-    command: "sudo python setup.py install"
+    command: "sudo python3 setup.py install"
     cwd: /home/ec2-user/INSTALL/qaehs_code/compiled/ImportDeconv_v1/for_redistribution_files_only
     test: "[ ! -f /home/ec2-user/INSTALLED ]"
   11-setup-qaehscode3:
-    command: "sudo python setup.py install"
+    command: "sudo python3 setup.py install"
     cwd: /home/ec2-user/INSTALL/qaehs_code/compiled/LibrarySearch_v1/for_redistribution_files_only
     test: "[ ! -f /home/ec2-user/INSTALLED ]"
   12-set-installed:
