--- a/django-react-web/package.json
+++ b/django-react-web/package.json
@@ -33,7 +33,7 @@
     "fs-extra": "3.0.1",
     "hash.js": "^1.1.5",
     "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
+    "jest": "^20.0.4",
     "lodash": "^4.17.10",
     "mobx": "^5.0.4",
     "mobx-react": "^5.2.5",
