--- a/django-react-web/package.json
+++ b/django-react-web/package.json
@@ -75,8 +75,8 @@
       "<rootDir>/config/polyfills.js"
     ],
     "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
-      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
+      "<rootDir>/frontend/src/**/__tests__/**/*.{js,jsx,mjs}",
+      "<rootDir>/frontend/src/**/?(*.)(spec|test).{js,jsx,mjs}"
     ],
     "testEnvironment": "node",
     "testURL": "http://localhost",
