--- a/django-react-web/package.json
+++ b/django-react-web/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^16.4.2",
     "react-dom-confetti": "0.0.10",
     "react-router-dom": "^4.3.1",
+    "react-test-renderer": "^16.6.0",
     "resolve": "1.6.0",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.3",
