--- a/django-react-web/.ebextensions/00-qaehs.config
+++ b/django-react-web/.ebextensions/00-qaehs.config
@@ -1,5 +1,3 @@
 container_commands:
-  01-collectstatic:
-    command: "python manage.py collectstatic"
-  02-migrate:
-    command: "python manage.py migrate"
+  01-migrate:
+    command: "source /opt/python/run/venv/bin/activate && python manage.py migrate"
